--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="color_hint">Select a color</string>
+    <string name="name_hint">Enter the title</string>
+    <string name="mass_hint">Enter the mass</string>
+    <string name="location_hint">Enter the Location</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
 </resources>
